# ros2_message

./: CMakeLists.txt  package.xml
docs/: 蜂巢智控-接口协议设计.md
mavlink/: common.xml  hivemind.xml  minimal.xml  standard.xml
mavlink/c/common/: common.h  mavlink.h  version.h
mavlink/c/hivemind/: hivemind.h  mavlink.h  mavlink_msg_hk_ai_status.h  mavlink_msg_hk_detection_result.h  mavlink_msg_hk_drone_ai_status.h  mavlink_msg_hk_drone_attitude.h  mavlink_msg_hk_drone_attitude_base.h  mavlink_msg_hk_drone_battery.h  mavlink_msg_hk_drone_flight_status.h  mavlink_msg_hk_drone_gps.h  mavlink_msg_hk_drone_heading.h  mavlink_msg_hk_drone_heartbeat.h  mavlink_msg_hk_drone_home_vtol.h  mavlink_msg_hk_drone_motor_status.h  mavlink_msg_hk_drone_position.h  mavlink_msg_hk_drone_system_status.h  mavlink_msg_hk_drone_velocity.h  mavlink_msg_hk_gpu_status.h  mavlink_msg_hk_launcher_detail.h  mavlink_msg_hk_launcher_status.h  mavlink_msg_hk_mavlink_bridge_heart.h  mavlink_msg_hk_motor_status.h  mavlink_msg_hk_recognition_status.h  mavlink_msg_hk_target_situation.h  mavlink_msg_hk_track_ai_key_log.h  testsuite.h  version.h
mavlink/c/hivemind/common/: common.h  mavlink.h
mavlink/c/hivemind/hivemind/: hivemind.h  mavlink.h  (+5 more)
mavlink/c/minimal/: mavlink.h  minimal.h  version.h
mavlink/c/standard/: mavlink.h  standard.h  version.h
msg/: BridgeStatus.msg  DetectionResult.msg  DroneInfo.msg  RecognitionStatus.msg  TargetSituation.msg
srv/: GimbalControl.srv  Loiter.srv  LostBehaviorConfig.srv  NavigateTo.srv  PayloadSwitch.srv  ReturnToLaunch.srv  StrikeTarget.srv  Takeoff.srv
(+5 files in other folders)
